--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -691,5 +691,19 @@
   },
   "google_maps": {
     "google_maps_integration_desc": "Connectez votre compte Google Maps pour obtenir des résultats de recherche et recommandations de recherche de haute qualité."
+  },
+  "calendar": {
+    "all_categories": "Toutes les catégories",
+    "all_day_event": "Événement toute la journée",
+    "calendar_overview": "Aperçu du calendrier",
+    "categories": "Catégories",
+    "day": "Jour",
+    "events_scheduled": "événements prévus",
+    "filter_by_category": "Filtre par catégorie",
+    "filtered_results": "Résultats filtrés",
+    "month": "Mois",
+    "today": "Aujourd'hui",
+    "total_events": "Événements totaux",
+    "week": "Semaine"
   }
 }
