--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -691,5 +691,19 @@
     "adventure_recommendations": "Рекомендации приключений",
     "food": "Еда",
     "tourism": "Туризм"
+  },
+  "calendar": {
+    "all_categories": "Все категории",
+    "all_day_event": "Событие на весь день",
+    "calendar_overview": "Обзор календаря",
+    "categories": "Категории",
+    "day": "День",
+    "events_scheduled": "События запланированы",
+    "filter_by_category": "Фильтр по категории",
+    "filtered_results": "Отфильтрованные результаты",
+    "month": "Месяц",
+    "today": "Сегодня",
+    "total_events": "Общее количество событий",
+    "week": "Неделя"
   }
 }
