refactor: rename adventures to locations across the application
- Updated localization files to replace adventure-related terms with location-related terms.
- Refactored TypeScript types and variables from Adventure to Location in various routes and components.
- Adjusted UI elements and labels to reflect the change from adventures to locations.
- Ensured all references to adventures in the codebase are consistent with the new location terminology.

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -14,18 +14,12 @@
   "adventures": {
     "activities": {},
     "add_to_collection": "Zur Sammlung hinzufügen",
-    "adventure_delete_confirm": "Sind Sie sicher, dass Sie dieses Abenteuer löschen möchten? \nDiese Aktion kann nicht rückgängig gemacht werden.",
-    "collection_link_error": "Fehler beim Verknüpfen des Abenteuers mit der Sammlung",
-    "collection_link_success": "Abenteuer erfolgreich mit Sammlung verknüpft!",
-    "collection_remove_error": "Beim Entfernen des Abenteuers aus der Sammlung ist ein Fehler aufgetreten",
-    "collection_remove_success": "Abenteuer erfolgreich aus der Sammlung entfernt!",
     "delete": "Löschen",
     "edit_adventure": "Abenteuer bearbeiten",
     "no_image_found": "Kein Bild gefunden",
     "open_details": "Details",
     "remove_from_collection": "Aus Sammlung entfernen",
     "adventure": "Abenteuer",
-    "adventure_delete_success": "Abenteuer erfolgreich gelöscht!",
     "archive": "Archiv",
     "archived": "Archiviert",
     "archived_collection_message": "Sammlung erfolgreich archiviert!",
@@ -39,7 +33,6 @@
     "count_txt": "Suchergebnisse",
     "date": "Datum",
     "dates": "Termine",
-    "delete_adventure": "Abenteuer löschen",
     "delete_collection": "Sammlung löschen",
     "delete_collection_success": "Sammlung erfolgreich gelöscht!",
     "descending": "Absteigend",
@@ -56,8 +49,6 @@
     "my_collections": "Meine Sammlungen",
     "name": "Name",
     "no_image_url": "Unter dieser URL wurde kein Bild gefunden.",
-    "not_found": "Abenteuer nicht gefunden",
-    "not_found_desc": "Das von Ihnen gesuchte Abenteuer konnte nicht gefunden werden. \nBitte versuchen Sie ein anderes Abenteuer aus oder schauen Sie später noch mal vorbei.",
     "open_filters": "Filter öffnen",
     "order_by": "Sortieren nach",
     "order_direction": "Sortierreihenfolge",
@@ -80,10 +71,6 @@
     "activity_types": "Aktivitätstypen",
     "add": "Hinzufügen",
     "add_notes": "Notizen hinzufügen",
-    "adventure_create_error": "Das Abenteuer konnte nicht erstellt werden",
-    "adventure_created": "Abenteuer erstellt",
-    "adventure_update_error": "Das Abenteuer konnte nicht aktualisiert werden",
-    "adventure_updated": "Abenteuer aktualisiert",
     "basic_information": "Basisdaten",
     "category": "Kategorie",
     "clear_map": "Karte leeren",
@@ -100,23 +87,19 @@
     "location": "Standort",
     "location_information": "Standortinformationen",
     "my_images": "Meine Bilder",
-    "new_adventure": "Neues Abenteuer",
     "no_description_found": "Keine Beschreibung gefunden",
     "no_images": "Keine Bilder",
     "no_location": "Bitte geben Sie einen Ort ein",
     "no_results": "Keine Ergebnisse gefunden",
-    "public_adventure": "Öffentliches Abenteuer",
     "remove": "Entfernen",
     "save_next": "Speichern & weiter",
     "search_for_location": "Nach einem Ort suchen",
     "search_results": "Suchergebnisse",
     "see_adventures": "Siehe Abenteuer",
-    "share_adventure": "Teilen Sie dieses Abenteuer!",
     "start_date": "Startdatum",
     "upload_image": "Bild hochladen",
     "url": "URL",
     "warning": "Warnung",
-    "wiki_desc": "Ruft einen Auszug aus einem Wikipedia-Artikel ab, der zum Namen des Abenteuers passt.",
     "wikipedia": "Wikipedia",
     "adventure_not_found": "Keine Abenteuer vorhanden. \nFügen Sie welche über die Plus-Schaltfläche unten rechts hinzu oder versuchen Sie, die Filter zu ändern!",
     "all": "Alle",
@@ -124,7 +107,6 @@
     "mark_visited": "als besucht markieren",
     "my_adventures": "Meine Abenteuer",
     "no_adventures_found": "Keine Abenteuer gefunden",
-    "no_collections_found": "Es wurden keine Sammlungen gefunden, die zu diesem Abenteuer hinzugefügt werden können.",
     "no_linkable_adventures": "Es wurden keine Abenteuer gefunden, die mit dieser Sammlung verknüpft werden können.",
     "not_visited": "Nicht besucht",
     "regions_updated": "Regionen aktualisiert",
@@ -181,10 +163,7 @@
     "starting_airport": "Startflughafen",
     "to": "Nach",
     "transportation_delete_confirm": "Sind Sie sicher, dass Sie diesen Transport löschen möchten? \nDies lässt sich nicht rückgängig machen.",
-    "will_be_marked": "wird als besucht markiert, sobald das Abenteuer gespeichert wird.",
     "cities_updated": "Städte aktualisiert",
-    "create_adventure": "Erstelle Abenteuer",
-    "no_adventures_to_recommendations": "Keine Abenteuer gefunden. \nFügen Sie mindestens ein Abenteuer hinzu, um Empfehlungen zu erhalten.",
     "finding_recommendations": "Entdecken Sie verborgene Schätze für Ihr nächstes Abenteuer",
     "attachment": "Anhang",
     "attachment_delete_success": "Anhang gelöscht!",
@@ -246,7 +225,31 @@
     "name_location": "Name, Ort",
     "collection_contents": "Sammelinhalt",
     "check_in": "Einchecken",
-    "check_out": "Kasse"
+    "check_out": "Kasse",
+    "collection_link_location_error": "Fehlerverknüpfungsort zur Sammlung",
+    "collection_link_location_success": "Standort, die mit der Sammlung erfolgreich verknüpft sind!",
+    "collection_locations": "Sammelorte einbeziehen",
+    "collection_remove_location_error": "Fehler zur Entfernung des Standorts aus der Sammlung",
+    "collection_remove_location_success": "Standort erfolgreich aus der Sammlung entfernt!",
+    "create_location": "Standort erstellen",
+    "delete_location": "Position löschen",
+    "edit_location": "Standort bearbeiten",
+    "location_create_error": "Der Standort erstellt nicht",
+    "location_created": "Ort erstellt",
+    "location_delete_confirm": "Sind Sie sicher, dass Sie diesen Ort löschen möchten? \nDiese Aktion kann nicht rückgängig gemacht werden.",
+    "location_delete_success": "Standort erfolgreich gelöscht!",
+    "location_not_found": "Ort nicht gefunden",
+    "location_not_found_desc": "Der Ort, den Sie gesucht haben, konnte nicht gefunden werden. \nBitte probieren Sie einen anderen Ort aus oder schauen Sie später noch einmal vorbei.",
+    "location_update_error": "Der Standort nicht aktualisiert",
+    "location_updated": "Standort aktualisiert",
+    "new_location": "Neuer Standort",
+    "no_collections_to_add_location": "Keine Sammlungen, die diesen Ort hinzuzufügen.",
+    "no_locations_to_recommendations": "Keine Standorte gefunden. \nFügen Sie mindestens einen Ort hinzu, um Empfehlungen zu erhalten.",
+    "public_location": "Öffentliche Lage",
+    "share_location": "Teilen Sie diesen Ort!",
+    "visit_calendar": "Besuchen Sie den Kalender",
+    "wiki_location_desc": "Zieht Auszug aus dem Wikipedia -Artikel, der dem Namen des Standorts entspricht.",
+    "will_be_marked_location": "wird als besucht markiert, sobald der Standort gespeichert ist."
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
@@ -317,10 +320,10 @@
     "public_tooltip": "Mit einem öffentlichen Profil können Benutzer Sammlungen mit Ihnen teilen und Ihr Profil auf der Benutzerseite anzeigen.",
     "new_password": "Neues Passwort",
     "or_3rd_party": "Oder melden Sie sich bei einem Drittanbieter an",
-    "no_public_adventures": "Keine öffentlichen Abenteuer gefunden",
     "no_public_collections": "Keine öffentlichen Sammlungen gefunden",
-    "user_adventures": "Benutzerabenteuer",
-    "user_collections": "Benutzersammlungen"
+    "user_collections": "Benutzersammlungen",
+    "no_public_locations": "Keine öffentlichen Standorte gefunden",
+    "user_locations": "Benutzerstandorte"
   },
   "users": {
     "no_users_found": "Keine Benutzer mit öffentlichem Profil gefunden."
@@ -579,13 +582,16 @@
     "show_visited_regions": "Besuchte Regionen anzeigen",
     "view_details": "Details anzeigen",
     "adventure_stats": "Abenteuerstatistiken",
-    "adventures_shown": "Abenteuer gezeigt",
     "completion": "Fertigstellung",
     "display_options": "Anzeigenoptionen",
     "map_controls": "Kartensteuerungen",
     "marker_placed_on_map": "Marker auf der Karte platziert",
-    "place_marker_desc": "Klicken Sie auf die Karte, um einen Marker zu platzieren, oder fügen Sie ein Abenteuer ohne Ort hinzu.",
-    "regions": "Regionen"
+    "regions": "Regionen",
+    "add_location": "Neuen Standort hinzufügen",
+    "add_location_at_marker": "Fügen Sie einen neuen Standort bei Marker hinzu",
+    "location_map": "Standortkarte",
+    "locations_shown": "Standorte gezeigt",
+    "place_marker_desc_location": "Klicken Sie auf die Karte, um einen Marker zu platzieren."
   },
   "languages": {},
   "share": {
@@ -611,9 +617,9 @@
     "no_shared_adventures": "Dieser Benutzer hat noch keine öffentlichen Abenteuer geteilt.",
     "no_shared_collections": "Dieser Benutzer hat noch keine öffentlichen Sammlungen geteilt.",
     "planned_trips": "Geplante Reisen",
-    "public_adventure_experiences": "Öffentliche Abenteuererlebnisse",
     "travel_statistics": "Reisestatistik",
-    "your_journey_at_a_glance": "Ihre Abenteuerreise auf einen Blick"
+    "your_journey_at_a_glance": "Ihre Abenteuerreise auf einen Blick",
+    "public_location_experiences": "Öffentliche Standortlebnisse"
   },
   "categories": {
     "category_name": "Kategoriename",
@@ -622,9 +628,9 @@
     "manage_categories": "Kategorien verwalten",
     "no_categories_found": "Keine Kategorien gefunden.",
     "select_category": "Kategorie wählen",
-    "update_after_refresh": "Die Abenteuerkarten werden aktualisiert, sobald Sie die Seite aktualisieren.",
     "add_new_category": "Neue Kategorie hinzufügen",
-    "name_required": "Der Kategorienname ist erforderlich"
+    "name_required": "Der Kategorienname ist erforderlich",
+    "location_update_after_refresh": "Die Standortkarten werden aktualisiert, sobald Sie die Seite aktualisiert haben."
   },
   "dashboard": {
     "add_some": "Warum nicht gleich Ihr nächstes Abenteuer planen? Sie können ein neues Abenteuer hinzufügen, indem Sie auf den Button unten klicken.",
@@ -670,9 +676,9 @@
   "recomendations": {
     "recommendation": "Empfehlung",
     "recommendations": "Empfehlungen",
-    "adventure_recommendations": "Abenteuerempfehlungen",
     "food": "Essen",
-    "tourism": "Tourismus"
+    "tourism": "Tourismus",
+    "location_recommendations": "Standortempfehlungen"
   },
   "lodging": {
     "apartment": "Wohnung",
@@ -695,17 +701,19 @@
     "google_maps_integration_desc": "Verbinden Sie Ihr Google Maps-Konto, um hochwertige Suchergebnisse und Empfehlungen für Standort zu erhalten."
   },
   "calendar": {
-    "all_categories": "Alle Kategorien",
     "all_day_event": "Ganztägige Veranstaltung",
     "calendar_overview": "Kalenderübersicht",
-    "categories": "Kategorien",
     "day": "Tag",
     "events_scheduled": "Veranstaltungen geplant",
-    "filter_by_category": "Filter nach Kategorie",
     "filtered_results": "Gefilterte Ergebnisse",
     "month": "Monat",
     "today": "Heute",
     "total_events": "Gesamtereignisse",
     "week": "Woche"
+  },
+  "locations": {
+    "location": "Standort",
+    "locations": "Standorte",
+    "my_locations": "Meine Standorte"
   }
 }
