--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -22,13 +22,7 @@
     "add_to_collection": "컬렉션에 추가하세요",
     "adventure": "모험",
     "adventure_calendar": "모험 달력",
-    "adventure_create_error": "모험을 만들지 못했습니다",
-    "adventure_created": "모험 생성됨",
-    "adventure_delete_confirm": "이 모험을 삭제 하시겠습니까? 이 행동은 취소 할 수 없습니다.",
-    "adventure_delete_success": "모험이 성공적으로 삭제되었습니다!",
     "adventure_not_found": "표시할 모험이 없습니다. 오른쪽 하단의 플러스 버튼을 사용하여 추가하거나 필터를 변경하세요!",
-    "adventure_update_error": "모험을 업데이트하지 못했습니다",
-    "adventure_updated": "모험 업데이트됨",
     "all": "모두",
     "archive": "보관",
     "archived": "보관됨",
@@ -56,16 +50,11 @@
     "collection_adventures": "컬렉션 모험을 추가하세요",
     "collection_archived": "이 컬렉션은 보관되었습니다.",
     "collection_completed": "이 컬렉션을 완성했습니다!",
-    "collection_link_error": "컬렉션에 모험 연결 중 오류",
-    "collection_link_success": "컬렉션에 모험이 성공적으로 연결되었습니다!",
-    "collection_remove_error": "컬렉션에서 모험을 제거 중 오류",
-    "collection_remove_success": "컬렉션에서 모험이 제거되었습니다!",
     "collection_stats": "컬렉션 통계",
     "copied_to_clipboard": "클립 보드에 복사됨!",
     "copy_failed": "복사 실패",
     "copy_link": "링크 복사",
     "count_txt": "검색과 일치하는 결과",
-    "create_adventure": "모험 생성",
     "create_new": "새로 만들기...",
     "date": "일자",
     "date_constrain": "컬렉션 일자로 제한",
@@ -74,7 +63,6 @@
     "day": "일",
     "days": "일",
     "delete": "삭제",
-    "delete_adventure": "모험 삭제",
     "delete_checklist": "체크리스트 삭제",
     "delete_collection": "컬렉션 삭제",
     "delete_collection_success": "컬렉션이 성공적으로 삭제되었습니다!",
@@ -123,10 +111,7 @@
     "my_collections": "내 컬렉션",
     "my_images": "내 이미지",
     "name": "이름",
-    "new_adventure": "새로운 모험",
     "no_adventures_found": "모험이 없습니다",
-    "no_adventures_to_recommendations": "모험이 없습니다. 장소를 추천받으려면 최소 하나 이상의 모험을 등록해야 합니다.",
-    "no_collections_found": "이 모험을 추가할 수 있는 컬렉션이 없습니다.",
     "no_description_found": "설명이 없습니다",
     "no_image_found": "이미지가 없습니다",
     "no_image_url": "해당 URL에 이미지가 없습니다.",
@@ -135,8 +120,6 @@
     "no_location": "위치를 입력하세요",
     "no_location_found": "위치가 없습니다",
     "no_results": "결과가 없습니다",
-    "not_found": "모험이 없습니다",
-    "not_found_desc": "당신이 찾고 있던 모험을 찾을 수 없었습니다. 다른 모험을 찾아보거나 나중에 다시 해 보세요.",
     "not_visited": "방문하지 않음",
     "note": "노트",
     "note_delete_confirm": "이 노트를 삭제 하시겠습니까? 이 행동은 취소 할 수 없습니다.",
@@ -151,7 +134,6 @@
     "preview": "미리보기",
     "private": "비공개",
     "public": "공개",
-    "public_adventure": "공개 모험",
     "rating": "평가",
     "regions_updated": "지역이 업데이트되었습니다",
     "remove": "제거",
@@ -162,7 +144,6 @@
     "see_adventures": "모험 보기",
     "set_to_pin": "고정하기",
     "share": "공유",
-    "share_adventure": "이 모험을 공유하세요!",
     "show": "보기",
     "sort": "정렬",
     "sources": "출처",
@@ -190,10 +171,8 @@
     "visited_region_check_desc": "이것을 선택하면 서버는 방문한 모든 모험을 확인하고 그 모험의 지역을 표시하여 세계 여행에서 방문 여부를 표시합니다.",
     "visits": "방문",
     "warning": "경고",
-    "wiki_desc": "모험의 이름과 일치하는 글을 위키백과에서 가져옵니다.",
     "wiki_image_error": "위키백과 이미지 가져오기 오류",
     "wikipedia": "위키백과",
-    "will_be_marked": "모험이 저장되면 방문했다고 표시합니다.",
     "checklists": "체크리스트",
     "cities_updated": "도시 업데이트됨",
     "clear": "초기화",
@@ -246,7 +225,31 @@
     "name_location": "이름, 위치",
     "collection_contents": "수집 내용",
     "check_in": "체크인",
-    "check_out": "체크 아웃"
+    "check_out": "체크 아웃",
+    "collection_link_location_error": "오류 연결 위치 컬렉션",
+    "collection_link_location_success": "컬렉션에 링크 된 위치!",
+    "collection_locations": "수집 위치를 포함합니다",
+    "collection_remove_location_error": "수집에서 위치를 제거하는 오류",
+    "collection_remove_location_success": "컬렉션에서 제거 된 위치는 성공적으로!",
+    "create_location": "위치를 만듭니다",
+    "delete_location": "위치 삭제",
+    "edit_location": "위치 편집",
+    "location_create_error": "위치를 만들지 못했습니다",
+    "location_created": "생성 된 위치",
+    "location_delete_confirm": "이 위치를 삭제 하시겠습니까? \n이 조치는 취소 할 수 없습니다.",
+    "location_delete_success": "위치가 성공적으로 삭제되었습니다!",
+    "location_not_found": "위치를 찾을 수 없습니다",
+    "location_not_found_desc": "당신이 찾고 있던 위치는 찾을 수 없습니다. \n다른 위치를 시도하거나 나중에 다시 확인하십시오.",
+    "location_update_error": "위치를 업데이트하지 못했습니다",
+    "location_updated": "위치 업데이트",
+    "new_location": "새로운 위치",
+    "no_collections_to_add_location": "이 위치를 추가하는 컬렉션은 없습니다.",
+    "no_locations_to_recommendations": "발견 된 위치는 없습니다. \n권장 사항을 얻으려면 하나 이상의 위치를 ​​추가하십시오.",
+    "public_location": "공개 위치",
+    "share_location": "이 위치를 공유하십시오!",
+    "visit_calendar": "캘린더를 방문하십시오",
+    "wiki_location_desc": "위치 이름과 일치하는 Wikipedia 기사에서 발췌 한 내용을 가져옵니다.",
+    "will_be_marked_location": "위치가 저장되면 방문한대로 표시됩니다."
   },
   "auth": {
     "confirm_password": "비밀번호 확인",
@@ -265,10 +268,10 @@
     "registration_disabled": "현재 등록할 수 없습니다.",
     "signup": "가입",
     "username": "사용자 이름",
-    "no_public_adventures": "공개 모험이 발견되지 않았습니다",
     "no_public_collections": "공개 컬렉션이 발견되지 않았습니다",
-    "user_adventures": "사용자 모험",
-    "user_collections": "사용자 수집"
+    "user_collections": "사용자 수집",
+    "no_public_locations": "공공 장소가 발견되지 않았습니다",
+    "user_locations": "사용자 위치"
   },
   "categories": {
     "category_name": "카테고리 이름",
@@ -277,9 +280,9 @@
     "manage_categories": "카테고리 관리",
     "no_categories_found": "카테고리가 없습니다.",
     "select_category": "카테고리 선택",
-    "update_after_refresh": "페이지를 새로고침해야 모험 카드가 업데이트됩니다.",
     "add_new_category": "새 카테고리를 추가하십시오",
-    "name_required": "카테고리 이름이 필요합니다"
+    "name_required": "카테고리 이름이 필요합니다",
+    "location_update_after_refresh": "페이지를 새로 고치면 위치 카드가 업데이트됩니다."
   },
   "checklist": {
     "checklist_delete_error": "체크리스트 삭제 오류",
@@ -381,13 +384,16 @@
     "show_visited_regions": "방문한 지역 보기",
     "view_details": "상세 보기",
     "adventure_stats": "모험 통계",
-    "adventures_shown": "모험 쇼",
     "completion": "완성",
     "display_options": "디스플레이 옵션",
     "map_controls": "맵 컨트롤",
     "marker_placed_on_map": "마커가지도에 배치되었습니다",
-    "place_marker_desc": "지도를 클릭하여 마커를 배치하거나 위치없이 모험을 추가하십시오.",
-    "regions": "지역"
+    "regions": "지역",
+    "add_location": "새로운 위치를 추가하십시오",
+    "add_location_at_marker": "마커에 새 위치를 추가하십시오",
+    "location_map": "위치지도",
+    "locations_shown": "표시된 위치",
+    "place_marker_desc_location": "지도를 클릭하여 마커를 배치하십시오."
   },
   "navbar": {
     "about": "Adventurelog 소개",
@@ -448,16 +454,16 @@
     "no_shared_adventures": "이 사용자는 아직 공개 모험을 공유하지 않았습니다.",
     "no_shared_collections": "이 사용자는 아직 공개 컬렉션을 공유하지 않았습니다.",
     "planned_trips": "계획된 여행",
-    "public_adventure_experiences": "공개 모험 경험",
     "your_journey_at_a_glance": "당신의 모험 여행",
-    "travel_statistics": "여행 통계"
+    "travel_statistics": "여행 통계",
+    "public_location_experiences": "공개 위치 경험"
   },
   "recomendations": {
     "recommendation": "추천",
     "recommendations": "권장 사항",
-    "adventure_recommendations": "모험 추천",
     "food": "음식",
-    "tourism": "관광 여행"
+    "tourism": "관광 여행",
+    "location_recommendations": "위치 권장 사항"
   },
   "search": {
     "adventurelog_results": "Adventurelog 결과",
@@ -694,17 +700,19 @@
     "google_maps_integration_desc": "Google지도 계정을 연결하여 고품질 위치 검색 결과 및 권장 사항을 얻으십시오."
   },
   "calendar": {
-    "all_categories": "모든 카테고리",
     "all_day_event": "하루 종일 이벤트",
     "calendar_overview": "캘린더 개요",
-    "categories": "카테고리",
     "day": "낮",
     "events_scheduled": "예약 된 이벤트",
-    "filter_by_category": "카테고리 별 필터",
     "filtered_results": "필터링 된 결과",
     "month": "월",
     "today": "오늘",
     "total_events": "총 이벤트",
     "week": "주"
+  },
+  "locations": {
+    "location": "위치",
+    "locations": "위치",
+    "my_locations": "내 위치"
   }
 }
