--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -14,18 +14,12 @@
   "adventures": {
     "activities": {},
     "add_to_collection": "Ajouter à la collection",
-    "adventure_delete_confirm": "Êtes-vous sûr de vouloir supprimer cette aventure ? \nCette action ne peut pas être annulée.",
-    "collection_link_error": "Erreur lors de la liaison de l'aventure à la collection",
-    "collection_link_success": "Aventure liée à la collection avec succès !",
-    "collection_remove_error": "Erreur lors de la suppression de l'aventure de la collection",
-    "collection_remove_success": "Aventure supprimée de la collection avec succès !",
     "delete": "Supprimer",
     "edit_adventure": "Modifier l'aventure",
     "no_image_found": "Aucune image trouvée",
     "open_details": "Ouvrir les détails",
     "remove_from_collection": "Supprimer de la collection",
     "adventure": "Aventure",
-    "adventure_delete_success": "Aventure supprimée avec succès !",
     "archive": "Archiver",
     "archived": "Archivée",
     "archived_collection_message": "Collection archivée avec succès !",
@@ -40,7 +34,6 @@
     "create_new": "Créer une nouvelle aventure...",
     "date": "Date",
     "dates": "Dates",
-    "delete_adventure": "Supprimer l'aventure",
     "delete_collection": "Supprimer la collection",
     "delete_collection_success": "Collection supprimée avec succès !",
     "descending": "Descendant",
@@ -57,8 +50,6 @@
     "my_collections": "Mes collections",
     "name": "Nom",
     "no_image_url": "Aucune image trouvée à cette URL.",
-    "not_found": "Aventure introuvable",
-    "not_found_desc": "L'aventure que vous cherchez est introuvable. \nVeuillez essayer une autre aventure ou revenez plus tard.",
     "open_filters": "Ouvrir les filtres",
     "order_by": "Trier par",
     "order_direction": "Direction du tri",
@@ -81,10 +72,6 @@
     "activity_types": "Types d'activités",
     "add": "Ajouter",
     "add_notes": "Ajouter des notes",
-    "adventure_create_error": "Échec de la création de l'aventure",
-    "adventure_created": "Aventure créée",
-    "adventure_update_error": "Échec de la mise à jour de l'aventure",
-    "adventure_updated": "Aventure mise à jour",
     "basic_information": "Informations de base",
     "category": "Catégorie",
     "clear_map": "Effacer la carte",
@@ -100,23 +87,19 @@
     "location": "Lieu",
     "location_information": "Informations de localisation",
     "my_images": "Mes images",
-    "new_adventure": "Nouvelle aventure",
     "no_description_found": "Aucune description trouvée",
     "no_images": "Aucune image",
     "no_location": "Veuillez entrer un emplacement",
     "no_results": "Aucun résultat trouvé",
-    "public_adventure": "Aventure publique",
     "remove": "Retirer",
     "save_next": "Sauvegarder",
     "search_for_location": "Rechercher un lieu",
     "search_results": "Résultats de la recherche",
     "see_adventures": "Voir les aventures",
-    "share_adventure": "Partagez cette aventure !",
     "start_date": "Date de début",
     "upload_image": "Télécharger une image",
     "url": "URL",
     "warning": "Avertissement",
-    "wiki_desc": "Obtient un extrait de l'article Wikipédia correspondant au nom de l'aventure.",
     "wikipedia": "Wikipédia",
     "adventure_not_found": "Il n'y a aucune aventure à afficher. \nAjoutez-en en utilisant le bouton '+' en bas à droite ou essayez de changer les filtres !",
     "all": "Tous",
@@ -124,7 +107,6 @@
     "mark_visited": "Marquer comme visité",
     "my_adventures": "Mes aventures",
     "no_adventures_found": "Aucune aventure trouvée",
-    "no_collections_found": "Aucune collection trouvée pour ajouter cette aventure.",
     "no_linkable_adventures": "Aucune aventure trouvée pouvant être liée à cette collection.",
     "not_visited": "Non visitée",
     "regions_updated": "régions mises à jour",
@@ -181,10 +163,7 @@
     "starting_airport": "Aéroport de départ",
     "to": "Vers",
     "transportation_delete_confirm": "Etes-vous sûr de vouloir supprimer ce transport ? \nCette action ne peut pas être annulée.",
-    "will_be_marked": "sera marqué comme visité une fois l’aventure sauvegardée.",
     "cities_updated": "villes mises à jour",
-    "create_adventure": "Créer une aventure",
-    "no_adventures_to_recommendations": "Aucune aventure trouvée. \nAjoutez au moins une aventure pour obtenir des recommandations.",
     "finding_recommendations": "Découvrir des trésors cachés pour votre prochaine aventure",
     "attachment": "Pièce jointe",
     "attachment_delete_success": "Pièce jointe supprimée avec succès !",
@@ -246,7 +225,31 @@
     "name_location": "nom, emplacement",
     "collection_contents": "Contenu de la collection",
     "check_in": "Enregistrement",
-    "check_out": "Vérifier"
+    "check_out": "Vérifier",
+    "collection_link_location_error": "Erreur liant l'emplacement à la collection",
+    "collection_link_location_success": "Emplacement lié à la collection avec succès!",
+    "collection_locations": "Inclure les emplacements de collecte",
+    "collection_remove_location_error": "Erreur de suppression de l'emplacement de la collection",
+    "collection_remove_location_success": "Emplacement retiré de la collection avec succès!",
+    "create_location": "Créer un emplacement",
+    "delete_location": "Supprimer l'emplacement",
+    "edit_location": "Modifier l'emplacement",
+    "location_create_error": "Échec de la création de l'emplacement",
+    "location_created": "Emplacement créé",
+    "location_delete_confirm": "Êtes-vous sûr de vouloir supprimer cet emplacement? \nCette action ne peut pas être annulée.",
+    "location_delete_success": "Emplacement supprimé avec succès!",
+    "location_not_found": "Emplacement introuvable",
+    "location_not_found_desc": "L'emplacement que vous recherchiez n'a pas pu être trouvé. \nVeuillez essayer un autre emplacement ou revenir plus tard.",
+    "location_update_error": "Échec de la mise à jour de l'emplacement",
+    "location_updated": "Emplacement mis à jour",
+    "new_location": "Nouvel emplacement",
+    "no_collections_to_add_location": "Aucune collection n'a été trouvée pour ajouter cet emplacement à.",
+    "no_locations_to_recommendations": "Aucun emplacement trouvé. \nAjoutez au moins un emplacement pour obtenir des recommandations.",
+    "public_location": "Lieu public",
+    "share_location": "Partagez cet emplacement!",
+    "visit_calendar": "Visiter le calendrier",
+    "wiki_location_desc": "Tire un extrait de l'article de Wikipedia correspondant au nom de l'emplacement.",
+    "will_be_marked_location": "sera marqué comme visité une fois l'emplacement enregistré."
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -317,10 +320,10 @@
     "public_tooltip": "Avec un profil public, les utilisateurs peuvent partager des collections avec vous et afficher votre profil sur la page des utilisateurs.",
     "new_password": "Nouveau mot de passe",
     "or_3rd_party": "Ou connectez-vous avec un service tiers",
-    "no_public_adventures": "Aucune aventure publique trouvée",
     "no_public_collections": "Aucune collection publique trouvée",
-    "user_adventures": "Aventures de l'utilisateur",
-    "user_collections": "Collections de l'utilisateur"
+    "user_collections": "Collections de l'utilisateur",
+    "no_public_locations": "Aucun emplacement public trouvé",
+    "user_locations": "Emplacements des utilisateurs"
   },
   "users": {
     "no_users_found": "Aucun utilisateur trouvé avec un profil public."
@@ -579,13 +582,16 @@
     "show_visited_regions": "Afficher les régions visitées",
     "view_details": "Afficher les détails",
     "adventure_stats": "Statistiques d'aventure",
-    "adventures_shown": "aventures montrées",
     "completion": "Achèvement",
     "display_options": "Options d'affichage",
     "map_controls": "Contrôles de cartes",
     "marker_placed_on_map": "Marqueur placé sur la carte",
-    "place_marker_desc": "Cliquez sur la carte pour placer un marqueur ou ajouter une aventure sans emplacement.",
-    "regions": "Régions"
+    "regions": "Régions",
+    "add_location": "Ajouter un nouvel emplacement",
+    "add_location_at_marker": "Ajouter un nouvel emplacement chez Marker",
+    "location_map": "Carte de localisation",
+    "locations_shown": "Emplacements montrés",
+    "place_marker_desc_location": "Cliquez sur la carte pour placer un marqueur."
   },
   "languages": {},
   "share": {
@@ -611,9 +617,9 @@
     "no_shared_adventures": "Cet utilisateur n'a encore partagé aucune aventure publique.",
     "no_shared_collections": "Cet utilisateur n'a pas encore partagé de collections publiques.",
     "planned_trips": "Voyages prévus",
-    "public_adventure_experiences": "Expériences d'aventure publique",
     "travel_statistics": "Statistiques de voyage",
-    "your_journey_at_a_glance": "Votre voyage d'aventure en un coup d'œil"
+    "your_journey_at_a_glance": "Votre voyage d'aventure en un coup d'œil",
+    "public_location_experiences": "Expériences de localisation publique"
   },
   "categories": {
     "category_name": "Nom de la catégorie",
@@ -622,9 +628,9 @@
     "manage_categories": "Gérer les catégories",
     "no_categories_found": "Aucune catégorie trouvée.",
     "select_category": "Sélectionnez une catégorie",
-    "update_after_refresh": "Les cartes d'aventure seront mises à jour une fois que vous aurez actualisé la page.",
     "add_new_category": "Ajouter une nouvelle catégorie",
-    "name_required": "Le nom de catégorie est requis"
+    "name_required": "Le nom de catégorie est requis",
+    "location_update_after_refresh": "Les cartes de localisation seront mises à jour une fois que vous avez actualisé la page."
   },
   "dashboard": {
     "add_some": "Pourquoi ne pas commencer à planifier votre prochaine aventure ? \nVous pouvez ajouter une nouvelle aventure en cliquant sur le bouton ci-dessous.",
@@ -670,9 +676,9 @@
   "recomendations": {
     "recommendation": "Recommandation",
     "recommendations": "Recommandations",
-    "adventure_recommendations": "Recommandations d'aventure",
     "food": "Nourriture",
-    "tourism": "Tourisme"
+    "tourism": "Tourisme",
+    "location_recommendations": "Recommandations de localisation"
   },
   "lodging": {
     "apartment": "Appartement",
@@ -695,17 +701,19 @@
     "google_maps_integration_desc": "Connectez votre compte Google Maps pour obtenir des résultats de recherche et recommandations de recherche de haute qualité."
   },
   "calendar": {
-    "all_categories": "Toutes les catégories",
     "all_day_event": "Événement toute la journée",
     "calendar_overview": "Aperçu du calendrier",
-    "categories": "Catégories",
     "day": "Jour",
     "events_scheduled": "événements prévus",
-    "filter_by_category": "Filtre par catégorie",
     "filtered_results": "Résultats filtrés",
     "month": "Mois",
     "today": "Aujourd'hui",
     "total_events": "Événements totaux",
     "week": "Semaine"
+  },
+  "locations": {
+    "location": "Emplacement",
+    "locations": "Lieux",
+    "my_locations": "Mes emplacements"
   }
 }
